--- a/Grafico/Gastos.form
+++ b/Grafico/Gastos.form
@@ -29,12 +29,12 @@
               <text value="Menu Principal"/>
             </properties>
           </component>
-          <component id="1b463" class="javax.swing.JButton" binding="button2" default-binding="true">
+          <component id="1b463" class="javax.swing.JButton" binding="cuentasBancariasButton" default-binding="true">
             <constraints>
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="Cuentas Bancarias"/>
             </properties>
           </component>
           <component id="31d4b" class="javax.swing.JButton" binding="button3" default-binding="true">
