--- a/Grafico/Dashboard.form
+++ b/Grafico/Dashboard.form
@@ -122,7 +122,7 @@
               <text value="Tarjetas de Credito"/>
             </properties>
           </component>
-          <component id="8a84f" class="javax.swing.JButton" binding="préstamosButton" default-binding="true">
+          <component id="8a84f" class="javax.swing.JButton" binding="prestamosButton">
             <constraints>
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
