--- a/Grafico/Prestamos.form
+++ b/Grafico/Prestamos.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.Prestamos">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="13" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="PrestamosPanel" layout-manager="GridLayoutManager" row-count="13" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="1025" height="655"/>
@@ -27,6 +27,7 @@
             <properties>
               <autoscrolls value="false"/>
               <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Página Principal"/>
             </properties>
           </component>
@@ -35,6 +36,8 @@
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Cuentas Bancarias"/>
             </properties>
           </component>
@@ -43,6 +46,8 @@
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Plazos Fijos"/>
             </properties>
           </component>
@@ -51,6 +56,8 @@
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Ingresos y Gastos"/>
             </properties>
           </component>
@@ -59,6 +66,8 @@
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Stocks"/>
             </properties>
           </component>
@@ -67,6 +76,8 @@
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Tarjetas de Crédito"/>
             </properties>
           </component>
@@ -75,6 +86,8 @@
               <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Préstamos"/>
             </properties>
           </component>
