--- a/Grafico/Tarjetas.form
+++ b/Grafico/Tarjetas.form
@@ -201,7 +201,7 @@
               <text value="Numero tarjeta"/>
             </properties>
           </component>
-          <component id="bb0dc" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="bb0dc" class="javax.swing.JTextField" binding="tfSaldoActual">
             <constraints>
               <grid row="6" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -209,7 +209,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="78314" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+          <component id="78314" class="javax.swing.JTextField" binding="tfNumeroTarjeta">
             <constraints>
               <grid row="8" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -217,7 +217,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="b2408" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="b2408" class="javax.swing.JTextField" binding="tfLimiteCredito">
             <constraints>
               <grid row="4" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -325,7 +325,7 @@
           <text value="Creditos Usados"/>
         </properties>
       </component>
-      <component id="6917d" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+      <component id="6917d" class="javax.swing.JTextField" binding="tfCreditoUsado">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
