--- a/Grafico/IngresoYGastos.form
+++ b/Grafico/IngresoYGastos.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.IngresoYGastos">
-  <grid id="27dc6" binding="IngresoPanel" layout-manager="GridLayoutManager" row-count="36" column-count="42" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="IngresoPanel" layout-manager="GridLayoutManager" row-count="36" column-count="44" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1877" height="1025"/>
+      <xy x="20" y="20" width="2043" height="1025"/>
     </constraints>
     <properties>
       <preferredSize width="960" height="920"/>
@@ -126,12 +126,12 @@
       </grid>
       <vspacer id="3a9bd">
         <constraints>
-          <grid row="2" column="39" row-span="33" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="41" row-span="33" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="17306" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="39" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="41" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Segoe UI Black" size="26"/>
@@ -140,15 +140,15 @@
       </component>
       <component id="9572d" class="javax.swing.JButton" binding="promedioMensualDeGastosButton" default-binding="true">
         <constraints>
-          <grid row="2" column="40" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="42" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Promedio mensual de gastos"/>
         </properties>
       </component>
-      <component id="15ca3" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="15ca3" class="javax.swing.JTextField" binding="tfPromMensualGastos">
         <constraints>
-          <grid row="3" column="40" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="3" column="42" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -156,12 +156,12 @@
       </component>
       <vspacer id="ae66d">
         <constraints>
-          <grid row="31" column="1" row-span="1" col-span="38" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="31" column="1" row-span="1" col-span="40" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="4addb" class="javax.swing.JComboBox" binding="cbtipoIngreso">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="38" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="40" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
@@ -171,25 +171,17 @@
           </model>
         </properties>
       </component>
-      <component id="16984" class="javax.swing.JButton" binding="btnBuscar">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="38" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Buscar"/>
-        </properties>
-      </component>
       <component id="72ef6" class="javax.swing.JButton" binding="promedioMensualDeIngresosButton" default-binding="true">
         <constraints>
-          <grid row="4" column="40" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="42" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="promedio mensual de Ingresos"/>
         </properties>
       </component>
-      <component id="aebdb" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="aebdb" class="javax.swing.JTextField" binding="tfPromMensualIngreso">
         <constraints>
-          <grid row="5" column="40" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="42" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -197,7 +189,7 @@
       </component>
       <component id="c1dd" class="javax.swing.JButton" default-binding="true">
         <constraints>
-          <grid row="6" column="40" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="42" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Promedio anual de gastos"/>
@@ -205,7 +197,7 @@
       </component>
       <component id="bb527" class="javax.swing.JButton" binding="agregarGastosButton" default-binding="true">
         <constraints>
-          <grid row="19" column="10" row-span="1" col-span="29" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="19" column="11" row-span="1" col-span="30" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Agregar Gastos"/>
@@ -213,7 +205,7 @@
       </component>
       <component id="d5a4b" class="javax.swing.JButton" binding="agregarIngresoButton" default-binding="true">
         <constraints>
-          <grid row="19" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="19" column="1" row-span="1" col-span="9" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Agregar Ingreso"/>
@@ -221,7 +213,7 @@
       </component>
       <vspacer id="3acf4">
         <constraints>
-          <grid row="26" column="9" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="26" column="10" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="f9a79" class="javax.swing.JLabel">
@@ -234,7 +226,7 @@
       </component>
       <component id="d009b" class="javax.swing.JLabel">
         <constraints>
-          <grid row="20" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="20" column="11" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Fuente"/>
@@ -242,7 +234,7 @@
       </component>
       <component id="558e9" class="javax.swing.JLabel">
         <constraints>
-          <grid row="21" column="10" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="21" column="11" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Cuenta de Banco"/>
@@ -262,19 +254,9 @@
         </constraints>
         <properties/>
       </component>
-      <component id="85325" class="javax.swing.JComboBox" default-binding="true">
-        <constraints>
-          <grid row="20" column="12" row-span="1" col-span="26" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <model>
-            <item value="Seleccionar una opción"/>
-          </model>
-        </properties>
-      </component>
       <component id="25aa9" class="javax.swing.JComboBox" default-binding="true">
         <constraints>
-          <grid row="21" column="12" row-span="1" col-span="26" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="21" column="13" row-span="1" col-span="27" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
@@ -284,7 +266,7 @@
       </component>
       <component id="700bd" class="javax.swing.JLabel">
         <constraints>
-          <grid row="22" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="22" column="11" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Frecuencia"/>
@@ -292,7 +274,7 @@
       </component>
       <component id="6a007" class="javax.swing.JComboBox" default-binding="true">
         <constraints>
-          <grid row="22" column="12" row-span="1" col-span="25" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="22" column="13" row-span="1" col-span="26" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <model>
@@ -335,17 +317,9 @@
           </model>
         </properties>
       </component>
-      <component id="4eb94" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="32249" class="javax.swing.JTextField" binding="tfPromAnualIngreso">
         <constraints>
-          <grid row="7" column="40" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
-      <component id="32249" class="javax.swing.JTextField" default-binding="true">
-        <constraints>
-          <grid row="9" column="40" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="9" column="42" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -353,7 +327,7 @@
       </component>
       <component id="7d380" class="javax.swing.JButton" default-binding="true">
         <constraints>
-          <grid row="8" column="40" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="42" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Promedio anual de Ingresos "/>
@@ -361,7 +335,7 @@
       </component>
       <scrollpane id="82fe2">
         <constraints>
-          <grid row="8" column="1" row-span="8" col-span="38" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="1" row-span="8" col-span="40" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -372,7 +346,7 @@
           </component>
         </children>
       </scrollpane>
-      <component id="d9322" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+      <component id="d9322" class="javax.swing.JTextField" binding="ingresoIDTextField">
         <constraints>
           <grid row="26" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -427,7 +401,7 @@
           <text value="Fecha"/>
         </properties>
       </component>
-      <grid id="684b4" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="684b4" binding="FechaIngresoPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="23" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -438,13 +412,13 @@
       </grid>
       <component id="de11c" class="javax.swing.JLabel">
         <constraints>
-          <grid row="23" column="10" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="23" column="11" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Fecha"/>
         </properties>
       </component>
-      <component id="5c1dd" class="javax.swing.JButton" default-binding="true">
+      <component id="5c1dd" class="javax.swing.JButton" binding="eliminarIngresoButton">
         <constraints>
           <grid row="26" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -460,7 +434,7 @@
           <text value="Inserta el ID del Gasto"/>
         </properties>
       </component>
-      <component id="de773" class="javax.swing.JTextField" default-binding="true">
+      <component id="de773" class="javax.swing.JTextField" binding="gastoIDTextField">
         <constraints>
           <grid row="27" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -468,7 +442,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="9b759" class="javax.swing.JButton" default-binding="true">
+      <component id="9b759" class="javax.swing.JButton" binding="eliminarGastoButton">
         <constraints>
           <grid row="27" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -476,22 +450,50 @@
           <text value="Eliminar Gasto"/>
         </properties>
       </component>
-      <grid id="2d8a3" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="23" column="13" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
-      <component id="b82f6" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+      <component id="b82f6" class="javax.swing.JTextField" binding="tfFuenteIngreso">
         <constraints>
           <grid row="20" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="5a12" class="javax.swing.JTextField" binding="tfFuenteGasto">
+        <constraints>
+          <grid row="20" column="14" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
         <properties/>
+      </component>
+      <component id="16984" class="javax.swing.JButton" binding="btnBuscar">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="40" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Buscar"/>
+        </properties>
+      </component>
+      <grid id="b45f5" binding="FechaGastosPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="23" column="14" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
+      <component id="98872" class="javax.swing.JTextField" binding="tfPromAnualGastos">
+        <constraints>
+          <grid row="7" column="42" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
     </children>
   </grid>
